# texyise

./: .gitignore  README.md  pyproject.toml  run_setup_latex.sh  run_setup_python.sh
offline_ai/: c_help.md
prog/c/examples/: root_solver.c
prog/c/learning/: Makefile  ex_str_etc.c
prog/cpp/json_parser/: Makefile  main.cpp  my_json.h  my_json.tcc
python/notebooks/: sample.ipynb
python/notebooks/lattice/: cubic_spline.ipynb
python/notebooks/order_of_conv/: conv.ipynb
python/src/texyise/: myfuns.py
samples/: sample_texyise.tex
templates/: texyise.cls
yb/: lattice.tex
